--- a/api/package.json
+++ b/api/package.json
@@ -14,15 +14,23 @@
     "npm": ">=6.14.6"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
+    "@google-cloud/local-auth": "^2.1.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
+    "googleapis": "^105.0.0",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
+    "passport": "^0.6.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
