--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "eslint": "^7.11.0",
     "firebase": "^9.9.4",
     "google-map-react": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -46,10 +47,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    
   },
   "browserslist": {
     "production": [
