--- a/client/package.json
+++ b/client/package.json
@@ -46,9 +46,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    
-  },
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
