--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
     "googleapis": "^105.0.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
