--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.4.0",
     "react-material-ui-searchbar": "^1.0.4",
     "react-redux": "^7.2.8",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
