--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
     "axios": "^0.27.2",
+    "emailjs-com": "^3.2.0",
     "eslint": "^7.11.0",
     "firebase": "^9.9.4",
     "google-map-react": "^2.2.0",
