--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.9",
     "@emailjs/browser": "^3.7.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -14,6 +15,7 @@
     "@mui/x-data-grid-generator": "^5.17.3",
     "@mui/x-data-grid-premium": "^5.17.3",
     "@paypal/react-paypal-js": "^7.8.1",
+    "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
@@ -21,6 +23,7 @@
     "emailjs-com": "^3.2.0",
     "eslint": "^7.11.0",
     "firebase": "^9.9.4",
+    "framer-motion": "^4.1.17",
     "google-map-react": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
