--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
     "react-material-ui-searchbar": "^1.0.4",
     "react-redux": "^7.2.8",
