--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "material-react-table": "^1.2.9",
     "react": "^17.0.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
